--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -19,3 +19,11 @@ jobs:
            uses: ./.github/workflows/reusable-workflow.yml
            with:
            node: 14
+
+           call-reusable-workflow:
+          strategy:
+            matrix:
+            nodeversion: [14, 16, 18, 20]
+          uses: ./.github/workflows/reusable-workflow.yml
+          with:
+           node: ${{ matrix.nodeversion }}
