--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -17,3 +17,11 @@ jobs:
       - name: Output the input value
         run: |
           echo "The node version to use is: ${{ inputs.node }}"
+  call-reusable-workflow:
+   strategy:
+     matrix:
+      nodeversion: [14, 16, 18, 20]
+   uses: ./.github/workflows/reusable-workflow.yml
+   with:
+    node: ${{ matrix.nodeversion }}
+
